--- a/css/index.css
+++ b/css/index.css
@@ -7,5 +7,14 @@ h2{
     color: black;
 
 }
+img { width: 300px;
+
+}
+css{
+    box-sizing: content-box;
+}
+body{
+    background-color: ;
+}
 
 /* gh-pages */
