--- a/css/index.css
+++ b/css/index.css
@@ -13,8 +13,8 @@ img { width: 300px;
 css{
     box-sizing: content-box;
 }
-body{
-    background-color: ;
+h3{
+    font-weight: bold;
 }
 
 /* gh-pages */
